<resources>
    <string name="app_name">TamTam</string>
    <string name="tab1_title">Mes trucs</string>
    <string name="tab2_title">Autour de moi</string>
    <string name="tab3_title">Trucs traqués</string>
    <string name="log_message">Message de trace</string>
    <string name="tab_log">Traces</string>
    <string name="action_add">Mettre en vente</string>
    <string name="action_settings">Paramètres</string>
    <string name="selling_sell">Vendre</string>
    <string name="selling_category">Catégorie :</string>
    <string name="selling_price">Prix :</string>
    <string name="selling_description">Description :</string>
    <string name="selling_location">Localisation :</string>
    <string name="selling_current_loc">Position actuelle</string>
    <string name="selling_with_me_loc">Toujours avec moi</string>
    <string name="selling_OK">OK</string>
    <string name="selling_rotate">Tourner</string>
    <string name="selling_cancel">Annuler</string>
    <string name="selling_validate">Valider</string>
    <string name="pref_port">Port</string>
    <string name="pref_port_summ">Port serveur</string>
</resources>
