<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.orange.pb.android.tamtam.SellingActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selling_sv" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/internalLayout_rl">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/selling_sell"
                android:id="@+id/selling_sell_tv"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/selling_picture_button_ll"
                android:layout_below="@+id/selling_sell_tv"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/selling_picture_iv"
                    android:layout_below="@+id/selling_sell_tv"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selling_rotate"
                    android:id="@+id/selling_rotate_b"
                    android:layout_below="@+id/selling_sell_tv"
                    android:layout_alignRight="@+id/selling_category_value_sp"
                    android:layout_alignEnd="@+id/selling_category_value_sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/selling_category"
                android:id="@+id/selling_category_tv"
                android:layout_below="@+id/selling_picture_button_ll"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="20dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selling_category_value_sp"
                android:layout_alignBottom="@+id/selling_category_tv"
                android:spinnerMode="dropdown"
                android:entries="@array/categories_array"
                android:focusable="false"
                android:layout_alignLeft="@+id/selling_sell_tv"
                android:layout_alignStart="@+id/selling_sell_tv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/selling_price"
                android:id="@+id/selling_price_tv"
                android:layout_below="@+id/selling_category_tv"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/selling_price_ll"
                android:layout_alignBottom="@+id/selling_price_tv"
                android:layout_alignLeft="@+id/selling_category_value_sp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/selling_price_value_tf"
                    android:inputType="numberDecimal"
                    android:layout_weight="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/selling_currency_tv"
                    android:text="€"
                    android:layout_gravity="right" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/selling_description"
                android:id="@+id/selling_description_tv"
                android:layout_below="@+id/selling_price_tv"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="60dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/selling_description_value_tf"
                android:layout_alignBottom="@+id/selling_description_tv"
                android:layout_alignLeft="@+id/selling_category_value_sp"
                android:layout_alignStart="@+id/selling_category_value_sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/selling_location_validation_ll"
                android:layout_below="@+id/selling_description_tv"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:measureWithLargestChild="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/selling_location_choice_vll"
                    android:visibility="invisible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/selling_location"
                        android:id="@+id/selling_location_tv"
                        android:layout_below="@+id/selling_description_tv"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/selling_location_tv"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/selling_location_rg">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selling_current_loc"
                            android:id="@+id/selling_current_loc_rb"
                            android:checked="true" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selling_with_me_loc"
                            android:id="@+id/selling_with_me_loc_rb" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/selling_validation_vll"
                    android:gravity="right">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selling_cancel"
                        android:id="@+id/selling_cancel_b" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selling_validate"
                        android:id="@+id/selling_validate_b" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
